# libaaarg

./: Cargo.toml  README.md
src/: encoding.rs  lib.rs
src/blocks/: alias.rs  mod.rs  stutter.rs
